--- a/question.html
+++ b/question.html
@@ -16,8 +16,7 @@
 		<img class = "Gif" src="images/Q1.gif" alt="Procrastination"/>
 		<h2 class="question-title">Q1. How do you procrastinate your studies?</h2>
 
-	
-		<div class="image_block">
+		<div class="image_block first">
 
 			<div class="image_block_inner">
 			<!-- <div class ="radiobox">  -->
@@ -30,7 +29,7 @@
 
 			</div>
 		</div>
-	
+
 		<div class="image_block">
 
 			<div class="image_block_inner">
@@ -43,6 +42,7 @@
 			
 			</div>
 		</div>
+
 		<div class="image_block">
 
 			<div class="image_block_inner">
@@ -67,7 +67,7 @@
 			
 			</div>
 		</div>
-		<div class="image_block">
+		<div class="image_block last">
 
 			<div class="image_block_inner">
 			<!-- <div class ="radiobox">  -->
@@ -81,8 +81,8 @@
 		</div>
 	</div>
 
-<button class="button" > Next </button>
-	
+
+<button id="button" > Next </button>
 	
 <div id='TQ2' >
 	<img class = "Gif" src="images/Q2.gif" alt="RoomClean"/>	
@@ -91,12 +91,12 @@
 
 	 
 
-	<div class="image_block">
+	<div class="image_block first few">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q2" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q2" id="rb6"/>
+				<label for="rb6"> 
 					<img class= "option" src="images/Q2.1.jpg" alt="Question 2 / Choice 1"  />
 				</label>
 			
@@ -109,8 +109,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q2" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q2" id="rb7"/>
+				<label for="rb7"> 
 					<img class= "option" src="images/Q2.2.jpg" alt="Question 2 / Choice 2"  />
 				</label>
 			
@@ -123,8 +123,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q2" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q2" id="rb8"/>
+				<label for="rb8"> 
 					<img class= "option" src="images/Q2.3.jpg" alt="Question 2 / Choice 3"  />
 				</label>
 			
@@ -140,14 +140,15 @@
 
 
 <div id='TQ3' >
+	<img class = "Gif" src="images/Q3.gif" alt="personality"/>
 	<h2 class="question-title">Q3. Which adjective best suits your personality?</h2>
 
-	<div class="image_block">
+	<div class="image_block first">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q3" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q3" id="rb9"/>
+				<label for="rb9"> 
 					<img class= "option" src="images/Q3.1.jpg" alt="Question 3 / Choice 1"  />
 				</label>
 			
@@ -160,8 +161,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q3" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q3" id="rb10"/>
+				<label for="rb10"> 
 					<img class= "option" src="images/Q3.5.jpg" alt="Question 3 / Choice 2"  />
 				</label>
 			
@@ -174,8 +175,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q3" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q3" id="rb11"/>
+				<label for="rb11"> 
 					<img class= "option" src="images/Q3.3.jpg" alt="Question 3 / Choice 3"  />
 				</label>
 			
@@ -188,8 +189,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q3" id="rb4"/>
-				<label for="rb4"> 
+				<input type = "radio" name="Q3" id="rb12"/>
+				<label for="rb12"> 
 					<img class= "option" src="images/Q3.4.jpg" alt="Question 3 / Choice 4"  />
 				</label>
 			
@@ -202,8 +203,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q3" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q3" id="rb13"/>
+				<label for="rb13"> 
 					<img class= "option" src="images/Q3.2.jpg" alt="Question 3 / Choice 5"  />
 				</label>
 			
@@ -219,14 +220,14 @@
 <div id='TQ4' >
 
 	<img class = "Gif" src="images/Q4.gif" alt="Coffee"/>
-	<h2 class="question-title">Q4. What’s your favorite drink from Liz’s Cafe?</h2>
+	<h2 class="question-title">Q4. What's your favorite drink from Liz's Cafe?</h2>
 		
-		<div class="image_block">
+		<div class="image_block first">
 
 			<div class="image_block_inner">
 			
-				<input type = "radio" name="Q4" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q4" id="rb14"/>
+				<label for="rb14"> 
 					<img class= "option" src="images/Q4.1.jpg" alt="Question 4 / Choice 1"  />
 				</label>
 			
@@ -240,8 +241,8 @@
 
 			<div class="image_block_inner">
 			
-				<input type = "radio" name="Q4" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q4" id="rb15"/>
+				<label for="rb15"> 
 					<img class= "option" src="images/Q4.2.jpg" alt="Question 4 / Choice 2"  />
 				</label>
 			
@@ -256,8 +257,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q4" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q4" id="rb16"/>
+				<label for="rb16"> 
 					<img class= "option" src="images/Q4.3.jpg" alt="Question 4 / Choice 3"  />
 				</label>
 			
@@ -270,8 +271,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q4" id="rb4"/>
-				<label for="rb4"> 
+				<input type = "radio" name="Q4" id="rb17"/>
+				<label for="rb17"> 
 					<img class= "option" src="images/Q4.4.jpg" alt="Question 4 / Choice 4"  />
 				</label>
 			
@@ -286,8 +287,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q4" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q4" id="rb18"/>
+				<label for="rb18"> 
 					<img class= "option" src="images/Q4.5.jpg" alt="Question 4 / Choice 5"  />
 				</label>
 			
@@ -304,12 +305,12 @@
 	
 	<h2 class="question-title">Q5.You just found a $100,000 buried under our Magnolia tree! The first thing you do is...</h2>
 
-	<div class="image_block">
+	<div class="image_block first">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q5" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q5" id="rb19"/>
+				<label for="rb19"> 
 					<img class= "option" src="images/Q5.1.jpg" alt="Question 5 / Choice 1"  />
 				</label>
 			
@@ -322,8 +323,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q5" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q5" id="rb20"/>
+				<label for="rb20"> 
 					<img class= "option" src="images/Q5.2.jpg" alt="Question 5 / Choice 2"  />
 				</label>
 			
@@ -336,8 +337,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q5" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q5" id="rb21"/>
+				<label for="rb21"> 
 					<img class= "option" src="images/Q5.3.jpg" alt="Question 5 / Choice 3"  />
 				</label>
 			
@@ -350,8 +351,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q5" id="rb4"/>
-				<label for="rb4"> 
+				<input type = "radio" name="Q5" id="rb22"/>
+				<label for="rb22"> 
 					<img class= "option" src="images/Q5.4.jpg" alt="Question 5 / Choice 4"  />
 				</label>
 			
@@ -362,10 +363,10 @@
 		
 	<div class="image_block">
 
-		<div class="image_block_inner">
+		<div class="image_block_inner last">
 			
-				<input type = "radio" name="Q5" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q5" id="rb23"/>
+				<label for="rb23"> 
 					<img class= "option" src="images/Q5.5.jpg" alt="Question 5 / Choice 5"  />
 				</label>
 			
@@ -377,15 +378,15 @@
 </div>	
 
 <div id='TQ6' >
-
+	<img class = "Gif" src="images/Q6.gif" alt="desertedIsland"/>
 	<h2 class="question-title">Q6. What would you bring on an abandoned island?</h2>
 
-	<div class="image_block">
+	<div class="image_block first">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q6" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q6" id="rb24"/>
+				<label for="rb24"> 
 					<img class= "option" src="images/Q6.1.jpg" alt="Question 6 / Choice 1"  />
 				</label>
 			
@@ -398,8 +399,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q6" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q6" id="rb25"/>
+				<label for="rb25"> 
 					<img class= "option" src="images/Q6.2.jpg" alt="Question 6 / Choice 2"  />
 				</label>
 			
@@ -412,8 +413,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q6" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q6" id="rb26"/>
+				<label for="rb26"> 
 					<img class= "option" src="images/Q6.3.jpg" alt="Question 6 / Choice 3"  />
 				</label>
 			
@@ -427,8 +428,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q6" id="rb4"/>
-				<label for="rb4"> 
+				<input type = "radio" name="Q6" id="rb27"/>
+				<label for="rb27"> 
 					<img class= "option" src="images/Q6.4.jpg" alt="Question 6 / Choice 4"  />
 				</label>
 			
@@ -441,8 +442,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q6" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q6" id="rb28"/>
+				<label for="rb28"> 
 					<img class= "option" src="images/Q6.5.jpg" alt="Question 6 / Choice 5"  />
 				</label>
 			
@@ -455,14 +456,15 @@
 
 
 <div id='TQ7'>
+	<img class = "Gif" src="images/Q7.jpg" alt="favorite"/>
 	<h2 class="question-title">Q7. What is your most favorite item in your room?</h2>
 
-	<div class="image_block">
+	<div class="image_block first">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q7" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q7" id="rb29"/>
+				<label for="rb29"> 
 					<img class= "option" src="images/Q7.1.jpg" alt="Question 7 / Choice 1"  />
 				</label>
 			
@@ -475,8 +477,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q7" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q7" id="rb30"/>
+				<label for="rb30"> 
 					<img class= "option" src="images/Q7.2.jpg" alt="Question 7 / Choice 2"  />
 				</label>
 			
@@ -489,8 +491,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q7" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q7" id="rb31"/>
+				<label for="rb31"> 
 					<img class= "option" src="images/Q7.3.jpg" alt="Question 7 / Choice 3"  />
 				</label>
 			
@@ -504,8 +506,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q7" id="rb4"/>
-				<label for="rb4"> 
+				<input type = "radio" name="Q7" id="rb32"/>
+				<label for="rb32"> 
 					<img class= "option" src="images/Q7.4.jpg" alt="Question 7 / Choice 4"  />
 				</label>
 			
@@ -518,8 +520,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q7" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q7" id="rb33"/>
+				<label for="rb33"> 
 					<img class= "option" src="images/Q7.5.jpg" alt="Question 7 / Choice 5"  />
 				</label>
 			
@@ -531,14 +533,15 @@
 
 	<div id='TQ8' >
 
+	<img class = "Gif" src="images/Q8.gif" alt="placeToLive"/>
 	<h2 class="question-title">Q8. Where would you choose to live in?</h2>
 
-	<div class="image_block">
+	<div class="image_block first">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q8" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q8" id="rb34"/>
+				<label for="rb34"> 
 					<img class= "option" src="images/Q8.1.jpg" alt="Question 8 / Choice 1"  />
 				</label>
 			
@@ -551,8 +554,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q8" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q8" id="rb35"/>
+				<label for="rb35"> 
 					<img class= "option" src="images/Q8.2.jpg" alt="Question 8 / Choice 2"  />
 				</label>
 			
@@ -565,8 +568,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q8" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q8" id="rb36"/>
+				<label for="rb36"> 
 					<img class= "option" src="images/Q8.3.jpg" alt="Question 8 / Choice 3"  />
 				</label>
 			
@@ -579,8 +582,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q8" id="rb4"/>
-				<label for="rb4"> 
+				<input type = "radio" name="Q8" id="rb37"/>
+				<label for="rb37"> 
 					<img class= "option" src="images/Q8.4.jpg" alt="Question 8 / Choice 4"  />
 				</label>
 			
@@ -593,8 +596,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q8" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q8" id="rb38"/>
+				<label for="rb38"> 
 					<img class= "option" src="images/Q8.5.jpg" alt="Question 8 / Choice 5"  />
 				</label>
 			
@@ -606,14 +609,15 @@
 
 <div id='TQ9' >	
 			
+	<img class = "Gif" src="images/Q9.gif" alt="dinnerDate"/>
 	<h2 class="question-title">Q9. My dinner date will be...</h2>
 
-	<div class="image_block">
+	<div class="image_block first">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q9" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q9" id="rb39"/>
+				<label for="rb39"> 
 					<img class= "option" src="images/Q9.1.jpg" alt="Question 9 / Choice 1"  />
 				</label>
 			
@@ -626,9 +630,9 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q9" id="rb2"/>
-				<label for="rb2"> 
-					<img class= "option" src="images/Q9.2.jpg" alt="Question 9 / Choice 2"  />
+				<input type = "radio" name="Q9" id="rb40"/>
+				<label for="rb40"> 
+					<img class= "option" src="images/Q9.3.jpg" alt="Question 9 / Choice 2"  />
 				</label>
 			
 			
@@ -640,9 +644,9 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q9" id="rb3"/>
-				<label for="rb3"> 
-					<img class= "option" src="images/Q9.3.jpg" alt="Question 9 / Choice 3"  />
+				<input type = "radio" name="Q9" id="rb41"/>
+				<label for="rb41"> 
+					<img class= "option" src="images/Q9.4.jpg" alt="Question 9 / Choice 3"  />
 				</label>
 			
 			
@@ -654,9 +658,9 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q9" id="rb4"/>
-				<label for="rb4"> 
-					<img class= "option" src="images/Q9.4.jpg" alt="Question 9 / Choice 4"  />
+				<input type = "radio" name="Q9" id="rb42"/>
+				<label for="rb42"> 
+					<img class= "option" src="images/Q9.2.jpg" alt="Question 9 / Choice 4"  />
 				</label>
 			
 			
@@ -668,8 +672,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q9" id="rb5"/>
-				<label for="rb5"> 
+				<input type = "radio" name="Q9" id="rb43"/>
+				<label for="rb43"> 
 					<img class= "option" src="images/Q9.5.jpg" alt="Question 9 / Choice 5"  />
 				</label>
 			
@@ -682,14 +686,15 @@
 
 <div id='TQ10' >
 
+	<img class = "Gif" id="too-big" src="images/Q10.gif" alt="workout"/>
 	<h2 class="question-title">Q10. What food do you want to eat right after workout?</h2>
 
-	<div class="image_block">
+	<div class="image_block first few">
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q10" id="rb1"/>
-				<label for="rb1"> 
+				<input type = "radio" name="Q10" id="rb44"/>
+				<label for="rb44"> 
 					<img class= "option" src="images/Q10.1.jpg" alt="Question 10 / Choice 1"  />
 				</label>
 			
@@ -702,8 +707,8 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q10" id="rb2"/>
-				<label for="rb2"> 
+				<input type = "radio" name="Q10" id="rb45"/>
+				<label for="rb45"> 
 					<img class= "option" src="images/Q10.2.jpg" alt="Question 10 / Choice 2"  />
 				</label>
 			
@@ -716,16 +721,25 @@
 
 		<div class="image_block_inner">
 			
-				<input type = "radio" name="Q10" id="rb3"/>
-				<label for="rb3"> 
+				<input type = "radio" name="Q10" id="rb46"/>
+				<label for="rb46"> 
 					<img class= "option" src="images/Q10.3.jpg" alt="Question 10 / Choice 3"  />
 				</label>
-			
-			
-
 		</div>
 	</div>
-</div>	  
+</div>
+
+<div id="submission">
+	<h2 class="question-title"> Are you ready for the result? </h2>
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	&nbsp;
+	<img class = "Gif" src="images/excited.gif" alt="workout"/>
+	<button id="submit"> Let's See! </button>
+</div> 
+
 </body>
 
 
