works with any screen size now

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Barnard Quiz</title>
+		<title>Barnard Personality Quiz</title>
 		<link rel="stylesheet" type="text/css" href="frontPage.css">
 	</head>
 	<body>
 		
-		<h1>Barnard Quiz</h1>
+		<h1>Barnard Personality Quiz</h1>
+		<p> Are you a Barnard techie, SGA President, artist, doctor or entrepreneur? </p>
 		<button id="goQuiz"class="button" type="button">Take the Quiz!</button>
 		<button class="button" id="buttTwo" type="button">Not Interested</button>
 
