--- a/question.html
+++ b/question.html
@@ -16,7 +16,7 @@
 		<img class = "Gif" src="images/Q1.gif" alt="Procrastination"/>
 		<h2 class="question-title">Q1. How do you procrastinate your studies?</h2>
 
-		<div class="image_block first">
+		<div class="image_block">
 
 			<div class="image_block_inner">
 			<!-- <div class ="radiobox">  -->
@@ -67,7 +67,7 @@
 			
 			</div>
 		</div>
-		<div class="image_block last">
+		<div class="image_block">
 
 			<div class="image_block_inner">
 			<!-- <div class ="radiobox">  -->
@@ -91,7 +91,7 @@
 
 	 
 
-	<div class="image_block first few">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -143,7 +143,7 @@
 	<img class = "Gif" src="images/Q3.gif" alt="personality"/>
 	<h2 class="question-title">Q3. Which adjective best suits your personality?</h2>
 
-	<div class="image_block first">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -222,7 +222,7 @@
 	<img class = "Gif" src="images/Q4.gif" alt="Coffee"/>
 	<h2 class="question-title">Q4. What's your favorite drink from Liz's Cafe?</h2>
 		
-		<div class="image_block first">
+		<div class="image_block">
 
 			<div class="image_block_inner">
 			
@@ -305,7 +305,7 @@
 	
 	<h2 class="question-title">Q5.You just found a $100,000 buried under our Magnolia tree! The first thing you do is...</h2>
 
-	<div class="image_block first">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -363,7 +363,7 @@
 		
 	<div class="image_block">
 
-		<div class="image_block_inner last">
+		<div class="image_block_inner">
 			
 				<input type = "radio" name="Q5" id="rb23"/>
 				<label for="rb23"> 
@@ -381,7 +381,7 @@
 	<img class = "Gif" src="images/Q6.gif" alt="desertedIsland"/>
 	<h2 class="question-title">Q6. What would you bring on an abandoned island?</h2>
 
-	<div class="image_block first">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -459,7 +459,7 @@
 	<img class = "Gif" src="images/Q7.jpg" alt="favorite"/>
 	<h2 class="question-title">Q7. What is your most favorite item in your room?</h2>
 
-	<div class="image_block first">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -536,7 +536,7 @@
 	<img class = "Gif" src="images/Q8.gif" alt="placeToLive"/>
 	<h2 class="question-title">Q8. Where would you choose to live in?</h2>
 
-	<div class="image_block first">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -612,7 +612,7 @@
 	<img class = "Gif" src="images/Q9.gif" alt="dinnerDate"/>
 	<h2 class="question-title">Q9. My dinner date will be...</h2>
 
-	<div class="image_block first">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -689,7 +689,7 @@
 	<img class = "Gif" id="too-big" src="images/Q10.gif" alt="workout"/>
 	<h2 class="question-title">Q10. What food do you want to eat right after workout?</h2>
 
-	<div class="image_block first few">
+	<div class="image_block">
 
 		<div class="image_block_inner">
 			
@@ -731,11 +731,6 @@
 
 <div id="submission">
 	<h2 class="question-title"> Are you ready for the result? </h2>
-	&nbsp;
-	&nbsp;
-	&nbsp;
-	&nbsp;
-	&nbsp;
 	<img class = "Gif" src="images/excited.gif" alt="workout"/>
 	<button id="submit"> Let's See! </button>
 </div> 
